--- a/resume/pdf.html
+++ b/resume/pdf.html
@@ -698,14 +698,14 @@ Connecting people’s enthusiasm with technology.
 
 <h3 id="technical">Technical</h3>
 
-Cloud Servers | Desktop Support | Server Administration | Customer Support
+Customer Support | Server Administration | Cloud Servers
 
 <hr />
 
 <h3 id="education">Education</h3>
 
 <dl>
-<dt>University of North Texas</dt><em>Music Composition</em><strong>1993 - 1998</strong>
+University of North Texas | Music Composition | 1993 - 1998 
 </dl>
 
 <hr />
