--- a/resume/pdf.html
+++ b/resume/pdf.html
@@ -730,18 +730,10 @@ Futuristic | Context | Relator | Strategic | Intellection
 <h3 id="experience">Experience</h3>
 
 <dl>
-<dt>Rackspace US, Inc.</dt>
-<dd><em>Cloud Launch Manager</em>
-<strong>Jan 2013 –  Present</strong>
-<dt>Rackspace US, Inc.</dt>
-<dd><em>Technical Account Manager</em>
-<strong>July 2012 – Jan 2013</strong>
-<dt>Rackspace US, Inc.</dt>
-<dd><em>Windows Cloud Administrator</em>
-<strong>Feb 2012 – July 2012</strong>
-<dt>SBTI, San Marcos, TX</dt>
-<dd><em>Technology Manager</em>
-<strong>2002 – 2011</strong>
+Rackspace US, Inc. | Cloud Launch Manager | Jan 2013 –  Present<br>
+Rackspace US, Inc. | Technical Account Manager | July 2012 – Jan 2013<br>
+Rackspace US, Inc. | Windows Cloud Administrator | Feb 2012 – July 2012<br>
+SBTI, San Marcos, TX | Technology Manager | 2002 – 2011
 </dd>
 
 
