--- a/resume/pdf.html
+++ b/resume/pdf.html
@@ -634,7 +634,7 @@ dl em {
 
 <div class="container">
     <div class="resume">
-        <h1>Bill Hertzing</h1>
+        <h2>Bill Hertzing</h2>
 
 <h2>Cloud Launch Manager</h2>
 
@@ -713,9 +713,7 @@ University of North Texas | Music Composition | 1993 - 1998
 <h3 id="certifications">Certifications</h3>
 
 <dl>
-<dt>ITIL® Foundation Certificate in IT Service Management</dt>
-<dd><em>CSME, Inc.</em>
-<strong>November 2012</strong></dd>
+ITIL® Foundation Certificate in IT Service Management | CSME, Inc. | November 2012
 </dl>
 
 <hr />
