--- a/resume/index.html
+++ b/resume/index.html
@@ -639,7 +639,7 @@ dl em {
 <h2>Cloud Launch Manager</h2>
 
 <blockquote>
-  <p><a href="http://blogimages.billhertzing.com/bill_hertzing_resume.pdf">Download PDF</a><br />	
+  <p><a href="http://blogimages.billhertzing.com/bill_hertzing_resume.pdf" target="_blank">Download PDF</a><br />	
   <a href="bill@hertzing.com">bill@hertzing.com</a><br />
   <a href="tel:+15123943556">+1 (512) 394-3556</a></p>
 </blockquote>
