--- a/resume/pdf.html
+++ b/resume/pdf.html
@@ -635,7 +635,7 @@ dl em {
 
 <div class="container">
     <div class="resume">
-        <h2>Bill Hertzing</h2>
+        <h2><b>Bill Hertzing</b></h2>
 
 <h2>Cloud Launch Manager</h2>
 
