--- a/resume/index.html
+++ b/resume/index.html
@@ -735,7 +735,7 @@ Connecting people’s enthusiasm with technology.
 
 <hr />
 
-<h3 id="strengths">Gallup Strengths</h3>
+<h3 id="strengths">Gallup<br>Strengths</h3>
 
 <ol>
 <li>Futuristic</li>
