--- a/resume/index.html
+++ b/resume/index.html
@@ -640,8 +640,8 @@ dl em {
 
 <blockquote>
   <p><a href="http://blogimages.billhertzing.com/bill_hertzing_resume.pdf" target="_blank">Download PDF</a><br />	
-  <a href="bill@hertzing.com">bill@hertzing.com</a><br />
-  <a href="tel:+15123943556">+1 (512) 394-3556</a></p>
+  bill@hertzing.com<br />
+  +1 (512) 394-3556</p>
 </blockquote>
 
 <hr />
