--- a/resume/index.html
+++ b/resume/index.html
@@ -648,7 +648,7 @@ dl em {
 			<hr />
 				<div id="achievement-list">
 					<script>
-					$( "#achievement-list" ).load( "http://blog.billhertzing.com/resume/achievements.html" );
+					$( "#achievement-list" ).load( "achievements.html" );
 					</script>
 				</div>
 			<hr />
