--- a/resume/pdf.html
+++ b/resume/pdf.html
@@ -629,6 +629,7 @@ dl em {
 }
 
 </style>
+  <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 </head>
 
 <body class="">
@@ -652,48 +653,12 @@ dl em {
 Connecting people’s enthusiasm with technology.
 </ol>
 
-<h3 id="achievements">Achievements</h3>
-
-<dl>
-<dt>Disaster Recovery, Backup and Retention</dt>
-<dd>
-&bull; Captured over $2,000,000 of intellectual property using virtual machines.</br>
-&bull; Eliminated $5,000 per year maintenance agreement using virtual machines.</br>
-&bull; Eliminated 99.9% risk of outmoded hardware failure using virtual machines.</br>
-&bull; Advised customers on backup and recovery using 100% cloud services.</br>
-&bull; Protected over $100,000 of intellectual property in one chartered project.</br>
-</dd>
-<dt>Support</dt>
-<dd>
-&bull; Maintained new customer account base for their first 60 days as a Rackspace Cloud Customer.</br>
-&bull; Supported 4 global offices using email, Webex© and Skype©.</br>
-&bull; Upgraded network switch in 4 hours by determining core network needs.</br>
-&bull; Provided Fanatical Support to customers and Rackers via phone, chat, and tickets. </br>
-&bull; Advised nationally syndicated cloud account in handling over 140k hits/min.  </br>
-</dd>
-<dt>Communication and Coordination</dt>
-<dd>
-&bull; Moved 200+ email accounts to MS Exchange© in under 30 days.</br>
-&bull; Deployed $30,000 enterprise-class server for corporate ERP solution.</br>
-&bull; Increased phone/voicemail capacity by 50% by installing new system.</br>
-&bull; Managed an audio/video team at four annual customer conferences.</br>
-</dd>
-<dt>Sales and Marketing</dt>
-<dd>
-&bull; Sold $140,000 in packaged software by communicating product benefits.</br>
-&bull; Generated ‘e-’sales of $15,000 annually by building customer relationships.</br>
-&bull; Saved $20,000 in marketing costs using S.E.O. ads & organic link building.</br>
-</dd>
-<dt>Content Creation and Delivery</dt>
-<dd>
-&bull; Developed & presented training about Cloud Launch to over 150 Rackers.</br>
-&bull; Created 11+ screencasts to assist with Cloud customer onboarding.</br>
-&bull; Streamed 200+ hours of e-Learning content using L.M.S.</br>
-&bull; Reduced website budget by 90% though the use of open source tools.</br>
-&bull; Achieved over 12,500 views on YouTube© through video case studies.</br>
-</dd>
-
-</dl>
+				<div id="achievement-list">
+					<script>
+					$( "#achievement-list" ).load( "achievements.html" );
+					</script>
+				</div>
+				
 <h3 id="technical">Technical</h3>
 <ol>
 Customer Support | Server Administration | Cloud Servers
