--- a/resume/pdf.html
+++ b/resume/pdf.html
@@ -641,8 +641,8 @@ dl em {
 <h2>Cloud Launch Manager</h2>
 
 <blockquote>
-  <a href="bill@hertzing.com">bill@hertzing.com</a><br />
-  <a href="tel:+15123943556">+1 (512) 394-3556</a></p>
+  bill@hertzing.com<br />
+  +1 (512) 394-3556</p>
 </blockquote>
 
 <hr />
