--- a/resume/achievements.html
+++ b/resume/achievements.html
@@ -9,7 +9,7 @@
 	<dl>
 		<dt>Disaster Recovery, Backup and Retention</dt>
 				<dd>
-					&bull; This is a test sentence.</br>
+					&bull; Captured over $2,000,000 of intellectual property using virtual machines.</br>
 					&bull; Eliminated $5,000 per year maintenance agreement using virtual machines.</br>
 					&bull; Eliminated 99.9% risk of outmoded hardware failure using virtual machines.</br>
 					&bull; Advised customers on backup and recovery using 100% cloud services.</br>
