--- a/resume/achievements.html
+++ b/resume/achievements.html
@@ -20,8 +20,8 @@
 					&bull; Maintained new customer account base for their first 60 days as a Rackspace Cloud Customer.</br>
 					&bull; Supported 4 global offices using email, Webex© and Skype©.</br>
 					&bull; Upgraded network switch in 4 hours by determining core network needs.</br>
-					&bull; Provided Fanatical Support to customers and Rackers via phone, chat, and tickets. </br>
-					&bull; Advised nationally syndicated cloud account in handling over 140k hits/min.  </br>
+					&bull; Provided Fanatical Support to customers and Rackers via phone, chat, and tickets.</br>
+					&bull; Advised nationally syndicated cloud account in handling over 140k hits/min.</br>
 				</dd>
 		<dt>Communication and Coordination</dt>
 				<dd>
@@ -34,7 +34,7 @@
 				<dd>
 					&bull; Sold $140,000 in packaged software by communicating product benefits.</br>
 					&bull; Generated ‘e-’sales of $15,000 annually by building customer relationships.</br>
-					&bull; Saved $20,000 in marketing costs using S.E.O. ads & organic link building.</br>
+					&bull; Attended two Rackspace::SOLVE events engaging with over 30 attendees per event.</br>
 				</dd>
 		<dt>Content Creation and Delivery</dt>
 				<dd>
