--- a/resume/achievements.html
+++ b/resume/achievements.html
@@ -34,7 +34,7 @@
 				<dd>
 					&bull; Sold $140,000 in packaged software by communicating product benefits.</br>
 					&bull; Generated ‘e-’sales of $15,000 annually by building customer relationships.</br>
-					&bull; Saved $20,000 in marketing costs using S.E.O. ads & organic link building.</br>
+					&bull; Attended two Rackspace::SOLVE events engaging with over 30 attendees per event.</br>
 				</dd>
 		<dt>Content Creation and Delivery</dt>
 				<dd>
