--- a/resume/index.html
+++ b/resume/index.html
@@ -636,9 +636,8 @@ dl em {
 
 			<blockquote>
 			  <p><a href="http://blogimages.billhertzing.com/bill_hertzing_resume.pdf" target="_blank">Download PDF</a><br />	
-			  bill@hertzing.com<br />
-			  +1 (512) 394-3556<br />
-			  billhertzing.com</p>
+			  bill@hertzing.com | billhertzing.com<br />
+			  +1 (512) 394-3556<br /></p>
 			</blockquote>
 			<hr />
 				<div id="objective-statement">
