PDF Button Change

--- a/resume/index.html
+++ b/resume/index.html
@@ -635,7 +635,7 @@ dl em {
 			<h2>Cloud Launch Manager</h2>
 
 			<blockquote>
-			  <p><a href="http://blogimages.billhertzing.com/bill_hertzing_resume.pdf" target="_blank">Download PDF</a><br />	
+			  <p><a href="http://blogimages.billhertzing.com/bill_hertzing_resume.pdf" target="_blank">Download 1-page (.pdf)</a><br />	
 			  bill@hertzing.com | billhertzing.com<br />
 			  +1 (512) 394-3556<br /></p>
 			</blockquote>
