--- a/resume/pdf.html
+++ b/resume/pdf.html
@@ -687,9 +687,9 @@ Futuristic | Context | Relator | Strategic | Intellection
 <h3 id="experience">Experience</h3>
 
 <ol>
-Rackspace US, Inc. | Cloud Launch Manager | Jan 2013 –  Present<br>
-Rackspace US, Inc. | Technical Account Manager | July 2012 – Jan 2013<br>
-Rackspace US, Inc. | Windows Cloud Administrator | Feb 2012 – July 2012<br>
+Rackspace, San Antonio, TX | Cloud Launch Manager | Jan 2013 –  Present<br>
+Rackspace, San Antonio, TX | Technical Account Manager | July 2012 – Jan 2013<br>
+Rackspace, San Antonio, TX | Windows Cloud Administrator | Feb 2012 – July 2012<br>
 SBTI, San Marcos, TX | Technology Manager | 2002 – 2011
 </ol>
 
