--- a/resume/pdf.html
+++ b/resume/pdf.html
@@ -636,6 +636,13 @@ dl em {
 
 <div class="container">
     <div class="resume">
+	<table style="width: 100%;">
+  		<tr>
+    		<td><h2><b>Bill Hertzing</b></h2><br><h2>Cloud Launch Manager</h2></td>
+    		<td><blockquote>bill@hertzing.com<br />billhertzing.com<br />+1 (512) 394-3556</p></blockquote>
+		</td>
+  		</tr>
+	</table>
         <h2><b>Bill Hertzing</b></h2>
 
 <h2>Cloud Launch Manager</h2>
