--- a/resume/pdf.html
+++ b/resume/pdf.html
@@ -638,19 +638,19 @@ dl em {
     <div class="resume">
 	<table style="width: 100%;">
   		<tr>
-    		<td><h2><b>Bill Hertzing</b></h2><br><h2>Cloud Launch Manager</h2></td>
-    		<td><blockquote>bill@hertzing.com<br />billhertzing.com<br />+1 (512) 394-3556</p></blockquote>
+    		<td valign="top"><h2><b>Bill Hertzing</b></h2><br><h2>Cloud Launch Manager</h2></td>
+    		<td valign="top"><blockquote>bill@hertzing.com<br />billhertzing.com<br />+1 (512) 394-3556</p></blockquote>
 		</td>
   		</tr>
 	</table>
-        <h2><b>Bill Hertzing</b></h2>
+        <h2><b>Name</b></h2>
 
-<h2>Cloud Launch Manager</h2>
+<h2>Title</h2>
 
 <blockquote>
-  bill@hertzing.com<br />
-  billhertzing.com<br />
-  +1 (512) 394-3556</p>
+  email<br />
+  website<br />
+  number</p>
 </blockquote>
 
 <hr />
