--- a/resume/pdf.html
+++ b/resume/pdf.html
@@ -638,20 +638,11 @@ dl em {
     <div class="resume">
 	<table style="width: 100%;">
   		<tr>
-    		<td valign="top"><h2><b>Bill Hertzing</b></h2><br><h2>Cloud Launch Manager</h2></td>
+    		<td valign="top"><h2><b>Bill Hertzing</b></h2><br /><h2>Cloud Launch Manager</h2></td>
     		<td valign="top"><blockquote>bill@hertzing.com<br />billhertzing.com<br />+1 (512) 394-3556</p></blockquote>
 		</td>
   		</tr>
 	</table>
-        <h2><b>Name</b></h2>
-
-<h2>Title</h2>
-
-<blockquote>
-  email<br />
-  website<br />
-  number</p>
-</blockquote>
 
 <hr />
 
