--- a/resume/pdf.html
+++ b/resume/pdf.html
@@ -627,6 +627,9 @@ dl em {
     font-style: normal;
   }
 }
+.bill {
+  font-size: 200%;
+}
 
 </style>
   <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
@@ -636,13 +639,12 @@ dl em {
 
 <div class="container">
     <div class="resume">
-	<table style="width: 100%;">
-  		<tr>
-    		<td valign="top"><h2><b>Bill Hertzing</b></h2><br /><h2>Cloud Launch Manager</h2></td>
-    		<td valign="top"><blockquote>bill@hertzing.com<br />billhertzing.com<br />+1 (512) 394-3556</p></blockquote>
-		</td>
-  		</tr>
-	</table>
+<table style="width: 100%;" border="0">
+  <tr>
+    <td valign="top"><b><span class="bill">Bill Hertzing</b><br>Cloud Launch Manager</class="bill"></td>
+    <td valign="top" align="right">bill@hertzing.com<br>billhertzing.com<br>+1 (512) 394-3556</td>
+  </tr>
+</table>
 
 <hr />
 
