--- a/resume/pdf.html
+++ b/resume/pdf.html
@@ -689,7 +689,7 @@ Futuristic | Context | Relator | Strategic | Intellection
 <ol>
 Rackspace, San Antonio, TX | Cloud Launch Manager | Jan 2013 –  Present<br>
 Rackspace, San Antonio, TX | Technical Account Manager | July 2012 – Jan 2013<br>
-Rackspace, San Antonio, TX | Windows Cloud Administrator | Feb 2012 – July 2012<br>
+Rackspace, San Antonio, TX | Windows Administrator | Feb 2012 – July 2012<br>
 SBTI, San Marcos, TX | Technology Manager | 2002 – 2011
 </ol>
 
