--- a/index2.html
+++ b/index2.html
@@ -87,38 +87,108 @@
 <ol>
 	<h2 class="latest">Latest Posts</h2>
 	<li class="post_list"><p class="post_entry">
-		<h2 class="post_title"><a href="./annual-dip-contest-2016.html" rel="bookmark" title="Permalink to Annual Dip Contest 2016">Annual Dip Contest 2016</a></h2>
+		<h2 class="post_title"><a href="./community-award.html" rel="bookmark" title="Permalink to Community Award">Community Award</a></h2>
 		<a href="./author/bill-hertzing.html">@Bill Hertzing</a>
 		<span> in </span>
 		<span class="post_category"><a href="./category/living.html" rel="bookmark" title="Permalink to Living">[ Living ]</a></span>
-		<span class="post_date">Mon 10 October 2016</span>
+		<span class="post_date">Wed 07 September 2016</span>
 	</li>
 	<li class="post_list"><p class="post_entry">
-		<h2 class="post_title"><a href="./openssh-on-windows-2016-technical-preview.html" rel="bookmark" title="Permalink to OpenSSH on Windows 2016 Technical Preview">OpenSSH on Windows 2016 Technical Preview</a></h2>
-		<a href="./author/bill-hertzing.html">@Bill Hertzing</a>
-		<span> in </span>
-		<span class="post_category"><a href="./category/technology.html" rel="bookmark" title="Permalink to Technology">[ Technology ]</a></span>
-		<span class="post_date">Mon 10 October 2016</span>
-	</li>
-	<li class="post_list"><p class="post_entry">
-		<h2 class="post_title"><a href="./comal-county-fair-2016.html" rel="bookmark" title="Permalink to Comal County Fair 2016">Comal County Fair 2016</a></h2>
+		<h2 class="post_title"><a href="./labor-day-austin-tx-2016-terra-toys-ikea-flat-tire.html" rel="bookmark" title="Permalink to Labor Day - Austin, TX - 2016 - Terra Toys, IKEA, Flat Tire">Labor Day - Austin, TX - 2016 - Terra Toys, IKEA, Flat Tire</a></h2>
 		<a href="./author/bill-hertzing.html">@Bill Hertzing</a>
 		<span> in </span>
 		<span class="post_category"><a href="./category/living.html" rel="bookmark" title="Permalink to Living">[ Living ]</a></span>
-		<span class="post_date">Tue 04 October 2016</span>
+		<span class="post_date">Tue 06 September 2016</span>
 	</li>
 	<li class="post_list"><p class="post_entry">
-		<h2 class="post_title"><a href="./california-filming-adventure-travel-journal-8-day-1.html" rel="bookmark" title="Permalink to California Filming Adventure - Travel Journal #8, Day 1">California Filming Adventure - Travel Journal #8, Day 1</a></h2>
+		<h2 class="post_title"><a href="./night-in-san-antonio.html" rel="bookmark" title="Permalink to Night in San Antonio">Night in San Antonio</a></h2>
 		<a href="./author/bill-hertzing.html">@Bill Hertzing</a>
 		<span> in </span>
 		<span class="post_category"><a href="./category/living.html" rel="bookmark" title="Permalink to Living">[ Living ]</a></span>
-		<span class="post_date">Mon 26 September 2016</span>
+		<span class="post_date">Tue 30 August 2016</span>
+	</li>
+	<li class="post_list"><p class="post_entry">
+		<h2 class="post_title"><a href="./burgers-and-art-folc-and-the-san-antonio-museum-of-art.html" rel="bookmark" title="Permalink to Burgers and Art - FOLC and the San Antonio Museum of Art">Burgers and Art - FOLC and the San Antonio Museum of Art</a></h2>
+		<a href="./author/bill-hertzing.html">@Bill Hertzing</a>
+		<span> in </span>
+		<span class="post_category"><a href="./category/living.html" rel="bookmark" title="Permalink to Living">[ Living ]</a></span>
+		<span class="post_date">Sat 27 August 2016</span>
+	</li>
+	<li class="post_list"><p class="post_entry">
+		<h2 class="post_title"><a href="./denver-co-cheyenne-wy-travel-journal-7.html" rel="bookmark" title="Permalink to Denver, CO & Cheyenne, WY - Travel Journal #7">Denver, CO & Cheyenne, WY - Travel Journal #7</a></h2>
+		<a href="./author/bill-hertzing.html">@Bill Hertzing</a>
+		<span> in </span>
+		<span class="post_category"><a href="./category/living.html" rel="bookmark" title="Permalink to Living">[ Living ]</a></span>
+		<span class="post_date">Sat 27 August 2016</span>
+	</li>
+	<li class="post_list"><p class="post_entry">
+		<h2 class="post_title"><a href="./vlogception.html" rel="bookmark" title="Permalink to VLOGCEPTION">VLOGCEPTION</a></h2>
+		<a href="./author/bill-hertzing.html">@Bill Hertzing</a>
+		<span> in </span>
+		<span class="post_category"><a href="./category/living.html" rel="bookmark" title="Permalink to Living">[ Living ]</a></span>
+		<span class="post_date">Sat 27 August 2016</span>
+	</li>
+	<li class="post_list"><p class="post_entry">
+		<h2 class="post_title"><a href="./red-rocks-amphitheater-boulder-denver-co.html" rel="bookmark" title="Permalink to Red Rocks Amphitheater - Boulder & Denver, CO">Red Rocks Amphitheater - Boulder & Denver, CO</a></h2>
+		<a href="./author/bill-hertzing.html">@Bill Hertzing</a>
+		<span> in </span>
+		<span class="post_category"><a href="./category/living.html" rel="bookmark" title="Permalink to Living">[ Living ]</a></span>
+		<span class="post_date">Tue 23 August 2016</span>
+	</li>
+	<li class="post_list"><p class="post_entry">
+		<h2 class="post_title"><a href="./aqua-zumba-san-pedro-springs-park-san-antonio-tx.html" rel="bookmark" title="Permalink to Aqua Zumba - San Pedro Springs Park - San Antonio, TX">Aqua Zumba - San Pedro Springs Park - San Antonio, TX</a></h2>
+		<a href="./author/bill-hertzing.html">@Bill Hertzing</a>
+		<span> in </span>
+		<span class="post_category"><a href="./category/living.html" rel="bookmark" title="Permalink to Living">[ Living ]</a></span>
+		<span class="post_date">Mon 22 August 2016</span>
+	</li>
+	<li class="post_list"><p class="post_entry">
+		<h2 class="post_title"><a href="./denver-estes-park-co-travel-journal-5.html" rel="bookmark" title="Permalink to Denver & Estes Park, CO - Travel Journal #5">Denver & Estes Park, CO - Travel Journal #5</a></h2>
+		<a href="./author/bill-hertzing.html">@Bill Hertzing</a>
+		<span> in </span>
+		<span class="post_category"><a href="./category/living.html" rel="bookmark" title="Permalink to Living">[ Living ]</a></span>
+		<span class="post_date">Mon 22 August 2016</span>
+	</li>
+	<li class="post_list"><p class="post_entry">
+		<h2 class="post_title"><a href="./jake-and-kimberlys-wedding-estes-park-co.html" rel="bookmark" title="Permalink to Jake and Kimberly's Wedding - Estes Park, CO">Jake and Kimberly's Wedding - Estes Park, CO</a></h2>
+		<a href="./author/bill-hertzing.html">@Bill Hertzing</a>
+		<span> in </span>
+		<span class="post_category"><a href="./category/living.html" rel="bookmark" title="Permalink to Living">[ Living ]</a></span>
+		<span class="post_date">Mon 22 August 2016</span>
+	</li>
+	<li class="post_list"><p class="post_entry">
+		<h2 class="post_title"><a href="./rocky-mountain-national-park-travel-journal-6.html" rel="bookmark" title="Permalink to Rocky Mountain National Park - Travel Journal #6">Rocky Mountain National Park - Travel Journal #6</a></h2>
+		<a href="./author/bill-hertzing.html">@Bill Hertzing</a>
+		<span> in </span>
+		<span class="post_category"><a href="./category/living.html" rel="bookmark" title="Permalink to Living">[ Living ]</a></span>
+		<span class="post_date">Mon 22 August 2016</span>
+	</li>
+	<li class="post_list"><p class="post_entry">
+		<h2 class="post_title"><a href="./team-outing-august-2015.html" rel="bookmark" title="Permalink to Team Outing August 2015">Team Outing August 2015</a></h2>
+		<a href="./author/bill-hertzing.html">@Bill Hertzing</a>
+		<span> in </span>
+		<span class="post_category"><a href="./category/living.html" rel="bookmark" title="Permalink to Living">[ Living ]</a></span>
+		<span class="post_date">Fri 05 August 2016</span>
+	</li>
+	<li class="post_list"><p class="post_entry">
+		<h2 class="post_title"><a href="./uss-lexington-corpus-christi-texas.html" rel="bookmark" title="Permalink to USS Lexington Corpus Christi Texas">USS Lexington Corpus Christi Texas</a></h2>
+		<a href="./author/bill-hertzing.html">@Bill Hertzing</a>
+		<span> in </span>
+		<span class="post_category"><a href="./category/living.html" rel="bookmark" title="Permalink to Living">[ Living ]</a></span>
+		<span class="post_date">Thu 04 August 2016</span>
+	</li>
+	<li class="post_list"><p class="post_entry">
+		<h2 class="post_title"><a href="./travel-journal-4-schlitterbahn-corpus-christi-tx.html" rel="bookmark" title="Permalink to Travel Journal #4 - Schlitterbahn Corpus Christi, TX">Travel Journal #4 - Schlitterbahn Corpus Christi, TX</a></h2>
+		<a href="./author/bill-hertzing.html">@Bill Hertzing</a>
+		<span> in </span>
+		<span class="post_category"><a href="./category/living.html" rel="bookmark" title="Permalink to Living">[ Living ]</a></span>
+		<span class="post_date">Wed 03 August 2016</span>
 	</li>
 </ol>
 
 <p class="paginator">
             <a href="./index.html">~:)</a>
-     2 ~ 19 
+     2 ~ 6 
         <a href="./index3.html">(:~</a>
 </p>
 
