--- a/index5.html
+++ b/index5.html
@@ -87,38 +87,108 @@
 <ol>
 	<h2 class="latest">Latest Posts</h2>
 	<li class="post_list"><p class="post_entry">
-		<h2 class="post_title"><a href="./night-in-san-antonio.html" rel="bookmark" title="Permalink to Night in San Antonio">Night in San Antonio</a></h2>
+		<h2 class="post_title"><a href="./digital-chivalry.html" rel="bookmark" title="Permalink to Digital Chivalry">Digital Chivalry</a></h2>
 		<a href="./author/bill-hertzing.html">@Bill Hertzing</a>
 		<span> in </span>
-		<span class="post_category"><a href="./category/living.html" rel="bookmark" title="Permalink to Living">[ Living ]</a></span>
-		<span class="post_date">Tue 30 August 2016</span>
+		<span class="post_category"><a href="./category/technology.html" rel="bookmark" title="Permalink to Technology">[ Technology ]</a></span>
+		<span class="post_date">Wed 10 June 2015</span>
 	</li>
 	<li class="post_list"><p class="post_entry">
-		<h2 class="post_title"><a href="./burgers-and-art-folc-and-the-san-antonio-museum-of-art.html" rel="bookmark" title="Permalink to Burgers and Art - FOLC and the San Antonio Museum of Art">Burgers and Art - FOLC and the San Antonio Museum of Art</a></h2>
+		<h2 class="post_title"><a href="./tropical-music.html" rel="bookmark" title="Permalink to Tropical Music">Tropical Music</a></h2>
 		<a href="./author/bill-hertzing.html">@Bill Hertzing</a>
 		<span> in </span>
-		<span class="post_category"><a href="./category/living.html" rel="bookmark" title="Permalink to Living">[ Living ]</a></span>
-		<span class="post_date">Sat 27 August 2016</span>
+		<span class="post_category"><a href="./category/music.html" rel="bookmark" title="Permalink to Music">[ Music ]</a></span>
+		<span class="post_date">Mon 08 June 2015</span>
 	</li>
 	<li class="post_list"><p class="post_entry">
-		<h2 class="post_title"><a href="./denver-co-cheyenne-wy-travel-journal-7.html" rel="bookmark" title="Permalink to Denver, CO & Cheyenne, WY - Travel Journal #7">Denver, CO & Cheyenne, WY - Travel Journal #7</a></h2>
+		<h2 class="post_title"><a href="./tiddlywiki-bookmark.html" rel="bookmark" title="Permalink to Tiddlywiki Bookmark">Tiddlywiki Bookmark</a></h2>
 		<a href="./author/bill-hertzing.html">@Bill Hertzing</a>
 		<span> in </span>
-		<span class="post_category"><a href="./category/living.html" rel="bookmark" title="Permalink to Living">[ Living ]</a></span>
-		<span class="post_date">Sat 27 August 2016</span>
+		<span class="post_category"><a href="./category/technology.html" rel="bookmark" title="Permalink to Technology">[ Technology ]</a></span>
+		<span class="post_date">Wed 06 May 2015</span>
 	</li>
 	<li class="post_list"><p class="post_entry">
-		<h2 class="post_title"><a href="./vlogception.html" rel="bookmark" title="Permalink to VLOGCEPTION">VLOGCEPTION</a></h2>
+		<h2 class="post_title"><a href="./cleaning-with-light.html" rel="bookmark" title="Permalink to Cleaning with Light">Cleaning with Light</a></h2>
+		<a href="./author/bill-hertzing.html">@Bill Hertzing</a>
+		<span> in </span>
+		<span class="post_category"><a href="./category/tips-advice.html" rel="bookmark" title="Permalink to Tips & Advice">[ Tips & Advice ]</a></span>
+		<span class="post_date">Sat 02 May 2015</span>
+	</li>
+	<li class="post_list"><p class="post_entry">
+		<h2 class="post_title"><a href="./texas-music.html" rel="bookmark" title="Permalink to Texas Music">Texas Music</a></h2>
+		<a href="./author/bill-hertzing.html">@Bill Hertzing</a>
+		<span> in </span>
+		<span class="post_category"><a href="./category/music.html" rel="bookmark" title="Permalink to Music">[ Music ]</a></span>
+		<span class="post_date">Sat 02 May 2015</span>
+	</li>
+	<li class="post_list"><p class="post_entry">
+		<h2 class="post_title"><a href="./aantv-drinking-game.html" rel="bookmark" title="Permalink to AANTV Drinking Game">AANTV Drinking Game</a></h2>
 		<a href="./author/bill-hertzing.html">@Bill Hertzing</a>
 		<span> in </span>
 		<span class="post_category"><a href="./category/living.html" rel="bookmark" title="Permalink to Living">[ Living ]</a></span>
-		<span class="post_date">Sat 27 August 2016</span>
+		<span class="post_date">Sat 18 April 2015</span>
+	</li>
+	<li class="post_list"><p class="post_entry">
+		<h2 class="post_title"><a href="./launch-hangout.html" rel="bookmark" title="Permalink to Launch Hangout">Launch Hangout</a></h2>
+		<a href="./author/bill-hertzing.html">@Bill Hertzing</a>
+		<span> in </span>
+		<span class="post_category"><a href="./category/technology.html" rel="bookmark" title="Permalink to Technology">[ Technology ]</a></span>
+		<span class="post_date">Fri 17 April 2015</span>
+	</li>
+	<li class="post_list"><p class="post_entry">
+		<h2 class="post_title"><a href="./internet-storage.html" rel="bookmark" title="Permalink to Internet Storage">Internet Storage</a></h2>
+		<a href="./author/bill-hertzing.html">@Bill Hertzing</a>
+		<span> in </span>
+		<span class="post_category"><a href="./category/technology.html" rel="bookmark" title="Permalink to Technology">[ Technology ]</a></span>
+		<span class="post_date">Thu 09 April 2015</span>
+	</li>
+	<li class="post_list"><p class="post_entry">
+		<h2 class="post_title"><a href="./my-three-favorite-strengths.html" rel="bookmark" title="Permalink to My Three Favorite Strengths">My Three Favorite Strengths</a></h2>
+		<a href="./author/bill-hertzing.html">@Bill Hertzing</a>
+		<span> in </span>
+		<span class="post_category"><a href="./category/living.html" rel="bookmark" title="Permalink to Living">[ Living ]</a></span>
+		<span class="post_date">Tue 31 March 2015</span>
+	</li>
+	<li class="post_list"><p class="post_entry">
+		<h2 class="post_title"><a href="./how-to-clothes-shop-with-a-woman.html" rel="bookmark" title="Permalink to How to Clothes Shop with a Woman">How to Clothes Shop with a Woman</a></h2>
+		<a href="./author/bill-hertzing.html">@Bill Hertzing</a>
+		<span> in </span>
+		<span class="post_category"><a href="./category/tips-advice.html" rel="bookmark" title="Permalink to Tips & Advice">[ Tips & Advice ]</a></span>
+		<span class="post_date">Fri 20 March 2015</span>
+	</li>
+	<li class="post_list"><p class="post_entry">
+		<h2 class="post_title"><a href="./sanctuary-in-a-digital-world.html" rel="bookmark" title="Permalink to Sanctuary in a Digital World">Sanctuary in a Digital World</a></h2>
+		<a href="./author/bill-hertzing.html">@Bill Hertzing</a>
+		<span> in </span>
+		<span class="post_category"><a href="./category/tips-advice.html" rel="bookmark" title="Permalink to Tips & Advice">[ Tips & Advice ]</a></span>
+		<span class="post_date">Fri 06 March 2015</span>
+	</li>
+	<li class="post_list"><p class="post_entry">
+		<h2 class="post_title"><a href="./the-art-of-decoupled-technology.html" rel="bookmark" title="Permalink to The Art of Decoupled Technology">The Art of Decoupled Technology</a></h2>
+		<a href="./author/bill-hertzing.html">@Bill Hertzing</a>
+		<span> in </span>
+		<span class="post_category"><a href="./category/technology.html" rel="bookmark" title="Permalink to Technology">[ Technology ]</a></span>
+		<span class="post_date">Mon 23 February 2015</span>
+	</li>
+	<li class="post_list"><p class="post_entry">
+		<h2 class="post_title"><a href="./three-website-disciplines-needed-to-build-a-website.html" rel="bookmark" title="Permalink to Three Website Disciplines Needed to Build a Website">Three Website Disciplines Needed to Build a Website</a></h2>
+		<a href="./author/bill-hertzing.html">@Bill Hertzing</a>
+		<span> in </span>
+		<span class="post_category"><a href="./category/technology.html" rel="bookmark" title="Permalink to Technology">[ Technology ]</a></span>
+		<span class="post_date">Mon 09 February 2015</span>
+	</li>
+	<li class="post_list"><p class="post_entry">
+		<h2 class="post_title"><a href="./lawn-maintenance.html" rel="bookmark" title="Permalink to Lawn Maintenance">Lawn Maintenance</a></h2>
+		<a href="./author/bill-hertzing.html">@Bill Hertzing</a>
+		<span> in </span>
+		<span class="post_category"><a href="./category/living.html" rel="bookmark" title="Permalink to Living">[ Living ]</a></span>
+		<span class="post_date">Mon 02 February 2015</span>
 	</li>
 </ol>
 
 <p class="paginator">
             <a href="./index4.html">~:)</a>
-     5 ~ 19 
+     5 ~ 6 
         <a href="./index6.html">(:~</a>
 </p>
 
