--- a/index6.html
+++ b/index6.html
@@ -87,39 +87,45 @@
 <ol>
 	<h2 class="latest">Latest Posts</h2>
 	<li class="post_list"><p class="post_entry">
-		<h2 class="post_title"><a href="./red-rocks-amphitheater-boulder-denver-co.html" rel="bookmark" title="Permalink to Red Rocks Amphitheater - Boulder & Denver, CO">Red Rocks Amphitheater - Boulder & Denver, CO</a></h2>
+		<h2 class="post_title"><a href="./wordcamp-hangout.html" rel="bookmark" title="Permalink to WordCamp Hangout">WordCamp Hangout</a></h2>
 		<a href="./author/bill-hertzing.html">@Bill Hertzing</a>
 		<span> in </span>
-		<span class="post_category"><a href="./category/living.html" rel="bookmark" title="Permalink to Living">[ Living ]</a></span>
-		<span class="post_date">Tue 23 August 2016</span>
+		<span class="post_category"><a href="./category/technology.html" rel="bookmark" title="Permalink to Technology">[ Technology ]</a></span>
+		<span class="post_date">Thu 29 January 2015</span>
 	</li>
 	<li class="post_list"><p class="post_entry">
-		<h2 class="post_title"><a href="./aqua-zumba-san-pedro-springs-park-san-antonio-tx.html" rel="bookmark" title="Permalink to Aqua Zumba - San Pedro Springs Park - San Antonio, TX">Aqua Zumba - San Pedro Springs Park - San Antonio, TX</a></h2>
+		<h2 class="post_title"><a href="./wordcamp-san-antonio.html" rel="bookmark" title="Permalink to WordCamp 2015 San Antonio">WordCamp 2015 San Antonio</a></h2>
 		<a href="./author/bill-hertzing.html">@Bill Hertzing</a>
 		<span> in </span>
-		<span class="post_category"><a href="./category/living.html" rel="bookmark" title="Permalink to Living">[ Living ]</a></span>
-		<span class="post_date">Mon 22 August 2016</span>
+		<span class="post_category"><a href="./category/technology.html" rel="bookmark" title="Permalink to Technology">[ Technology ]</a></span>
+		<span class="post_date">Mon 26 January 2015</span>
 	</li>
 	<li class="post_list"><p class="post_entry">
-		<h2 class="post_title"><a href="./denver-estes-park-co-travel-journal-5.html" rel="bookmark" title="Permalink to Denver & Estes Park, CO - Travel Journal #5">Denver & Estes Park, CO - Travel Journal #5</a></h2>
+		<h2 class="post_title"><a href="./security-at-every-layer.html" rel="bookmark" title="Permalink to Security at Every Layer">Security at Every Layer</a></h2>
 		<a href="./author/bill-hertzing.html">@Bill Hertzing</a>
 		<span> in </span>
-		<span class="post_category"><a href="./category/living.html" rel="bookmark" title="Permalink to Living">[ Living ]</a></span>
-		<span class="post_date">Mon 22 August 2016</span>
+		<span class="post_category"><a href="./category/technology.html" rel="bookmark" title="Permalink to Technology">[ Technology ]</a></span>
+		<span class="post_date">Wed 21 January 2015</span>
 	</li>
 	<li class="post_list"><p class="post_entry">
-		<h2 class="post_title"><a href="./jake-and-kimberlys-wedding-estes-park-co.html" rel="bookmark" title="Permalink to Jake and Kimberly's Wedding - Estes Park, CO">Jake and Kimberly's Wedding - Estes Park, CO</a></h2>
+		<h2 class="post_title"><a href="./use-your-data.html" rel="bookmark" title="Permalink to Use Your Data">Use Your Data</a></h2>
 		<a href="./author/bill-hertzing.html">@Bill Hertzing</a>
 		<span> in </span>
-		<span class="post_category"><a href="./category/living.html" rel="bookmark" title="Permalink to Living">[ Living ]</a></span>
-		<span class="post_date">Mon 22 August 2016</span>
+		<span class="post_category"><a href="./category/tips-advice.html" rel="bookmark" title="Permalink to Tips & Advice">[ Tips & Advice ]</a></span>
+		<span class="post_date">Mon 12 January 2015</span>
+	</li>
+	<li class="post_list"><p class="post_entry">
+		<h2 class="post_title"><a href="./google-car.html" rel="bookmark" title="Permalink to Google Car on a Sunday Drive">Google Car on a Sunday Drive</a></h2>
+		<a href="./author/bill-hertzing.html">@Bill Hertzing</a>
+		<span> in </span>
+		<span class="post_category"><a href="./category/technology.html" rel="bookmark" title="Permalink to Technology">[ Technology ]</a></span>
+		<span class="post_date">Sun 04 January 2015</span>
 	</li>
 </ol>
 
 <p class="paginator">
             <a href="./index5.html">~:)</a>
-     6 ~ 19 
-        <a href="./index7.html">(:~</a>
+     6 ~ 6 
 </p>
 
   </article>
