--- a/resume/achievements.html
+++ b/resume/achievements.html
@@ -10,8 +10,8 @@
 		<dt>Support</dt>
 				<dd>
 					&bull; Maintained new customer account base for their first 60 days as a Rackspace Cloud Customer.</br>
-					&bull; Supported 4 global offices using email, Webex© and Skype©.</br>
-					&bull; Upgraded network switch in 4 hours by determining core network needs.</br>
+					&bull; Achieved Net Promoter Score of 78 across customer base for 2016.</br>
+					&bull; Fulfilled 100% closed loop responses for customer service level agreements.</br>
 					&bull; Provided Fanatical Support to customers and Rackers via phone, chat, and tickets.</br>
 					&bull; Advised nationally syndicated cloud account in handling over 140k hits/min.</br>
 				</dd>
