--- a/resume/index2.html
+++ b/resume/index2.html
@@ -646,48 +646,11 @@ dl em {
 					</script>
 				</div>
 			<hr />
-				<div id="achievement-list">
+				<div id="launch-manager">
 					<script>
-					$( "#achievement-list" ).load( "achievements.html" );
+					$( "#launch-manager" ).load( "launch-manager.html" );
 					</script>
 				</div>
-			<hr />
-			<h3 id="technical">Technical</h3>
-				<ol>
-					<li>Cloud Servers</li>
-					<li>Desktop Support</li>
-					<li>Web design</li>
-					<li>Markdown</li>
-					<li>Server Administration</li>
-					<li>Customer Support</li>
-				</ol>
-			<hr />
-			<h3 id="education">Education</h3>
-			<dl>
-				<dt>University of North Texas</dt>
-				<dd><em>Music Composition</em>
-				<strong>1993 - 1998</strong></dd>
-				<dt>Houston Community College</dt>
-				<dd><em>Music Music Theory</em>
-				<strong>1990 - 1993</strong></dd>
-			</dl>
-			<hr />
-			<h3 id="certifications">Certifications</h3>
-			<dl>
-				<dt>ITIL® Foundation Certificate in IT Service Management</dt>
-					<dd><em>CSME, Inc.</em>
-					<strong>November 2012</strong></dd>
-				<dt>CloudU</dt>
-			</dl>
-			<hr />
-			<h3 id="strengths">Gallup<br>Strengths</h3>
-				<ol>
-					<li>Futuristic</li>
-					<li>Context</li>
-					<li>Relator</li>
-					<li>Strategic</li>
-					<li>Intellection</li>
-				</ol>
 			<hr />
 			<h3 id="experience">Experience</h3>
 			<dl>
