--- a/resume/index2.html
+++ b/resume/index2.html
@@ -651,12 +651,16 @@ dl em {
 					$( "#launch-manager" ).load( "launch-manager.html" );
 					</script>
 				</div>
-			<hr />
 			<h3 id="experience">Experience</h3>
 			<dl>
 				<dt>Rackspace US, Inc.</dt>
 					<dd><em>Cloud Launch Manager</em>
 					<strong>Jan 2013 –  Present</strong>
+				<div id="launch-manager">
+					<script>
+					$( "#launch-manager" ).load( "launch-manager.html" );
+					</script>
+				</div>
 				<dt>Rackspace US, Inc.</dt>
 					<dd><em>Technical Account Manager</em>
 					<strong>July 2012 – Jan 2013</strong>
