--- a/resume/index2.html
+++ b/resume/index2.html
@@ -657,6 +657,7 @@ dl em {
 					<dd><em>Cloud Launch Manager</em>
 					<strong>Jan 2013 –  Present</strong>
 			</dl>
+		</div>	
 				<div id="launch-manager">
 					<script>
 					$( "#launch-manager" ).load( "launch-manager.html" );
