--- a/resume/launch-manager.html
+++ b/resume/launch-manager.html
@@ -9,6 +9,8 @@
 	<dl>
 		<dt></dt>
 				<dd>
+					<em>Cloud Launch Manager</em>
+					<strong>Jan 2013 –  Present</strong>
 					&bull; Maintained new customer account base for their first 60 days as a Rackspace Cloud Customer.</br>
 					&bull; Achieved Net Promoter Score of 78 across customer base for 2016.</br>
 					&bull; Fulfilled 100% closed loop responses for customer service level agreements.</br>
