--- a/resume/launch-manager.html
+++ b/resume/launch-manager.html
@@ -9,6 +9,7 @@
 	<dl>
 		<dt></dt>
 				<dd>
+					<dt>Rackspace</dt>
 					<em>Cloud Launch Manager</em>
 					<strong>Jan 2013 –  Present</strong>
 					&bull; Maintained new customer account base for their first 60 days as a Rackspace Cloud Customer.</br>
