--- a/resume/index2.html
+++ b/resume/index2.html
@@ -651,7 +651,12 @@ dl em {
 					$( "#launch-manager" ).load( "launch-manager.html" );
 					</script>
 				</div>
-		
+			<hr />
+				<div id="technical-account-manager">
+					<script>
+					$( "#technical-account-manager" ).load( "technical-account-manager.html" );
+					</script>
+				</div>
 		</div>
 	</div>	
 </body>
