--- a/resume/technical-account-manager.html
+++ b/resume/technical-account-manager.html
@@ -7,7 +7,7 @@
 <body>
 <h3></h3>
 	<dl>
-		<dt></dt>
+		<dt>Rackspace</dt>
 				<dd>
 					<em>Technical Account Manager</em>
 					<strong>Jan 2013 –  Present</strong>
