--- a/resume/index2.html
+++ b/resume/index2.html
@@ -656,6 +656,11 @@ dl em {
 					$( "#technical-account-manager" ).load( "technical-account-manager.html" );
 					</script>
 				</div>
+				<div id="windows-administrator">
+					<script>
+					$( "#windows-administrator" ).load( "windows-administrator.html" );
+					</script>
+				</div>			
 		</div>
 	</div>	
 </body>
