--- a/resume/index2.html
+++ b/resume/index2.html
@@ -660,7 +660,12 @@ dl em {
 					<script>
 					$( "#windows-administrator" ).load( "windows-administrator.html" );
 					</script>
-				</div>			
+				</div>	
+				<div id="technology-manager">
+					<script>
+					$( "#technology-manager" ).load( "technology-manager.html" );
+					</script>
+				</div>				
 		</div>
 	</div>	
 </body>
