--- a/resume/index2.html
+++ b/resume/index2.html
@@ -665,6 +665,11 @@ dl em {
 					<script>
 					$( "#technology-manager" ).load( "technology-manager.html" );
 					</script>
+				</div>	
+				<div id="technology-director">
+					<script>
+					$( "#technology-director" ).load( "technology-director.html" );
+					</script>
 				</div>				
 		</div>
 	</div>	
