--- a/resume/index2.html
+++ b/resume/index2.html
@@ -670,7 +670,12 @@ dl em {
 					<script>
 					$( "#technology-director" ).load( "technology-director.html" );
 					</script>
-				</div>				
+				</div>	
+				<div id="network-specialist">
+					<script>
+					$( "#network-specialist" ).load( "network-specialist.html" );
+					</script>
+				</div>	
 		</div>
 	</div>	
 </body>
