--- a/resume/launch-manager.html
+++ b/resume/launch-manager.html
@@ -7,7 +7,7 @@
 <body>
 <h3>Achievements</h3>
 	<dl>
-		<dt>Rackspace</dt>
+		<dt>Rackspace, San Antonio, TX</dt>
 				<dd>
 					<em>Cloud Launch Manager</em>
 					<strong>Jan 2013 –  Present</strong>
