--- a/resume/launch-manager.html
+++ b/resume/launch-manager.html
@@ -16,6 +16,9 @@
 					&bull; Fulfilled 100% closed loop responses for customer service level agreements.</br>
 					&bull; Provided Fanatical Support to customers and Rackers via phone, chat, and tickets.</br>
 					&bull; Advised nationally syndicated cloud account in handling over 140k hits/min.</br>
+					&bull; Attended two Rackspace::SOLVE events engaging with over 30 attendees per event.</br>
+					&bull; Developed & presented training about Cloud Launch to over 150 Rackers.</br>
+					&bull; Created 11+ screencasts to assist with Cloud customer onboarding.</br>
 				</dd>
 	</dl>	 
 </body>
