--- a/resume/windows-administrator.html
+++ b/resume/windows-administrator.html
@@ -7,15 +7,10 @@
 <body>
 <h3></h3>
 	<dl>
-		<dt>Rackspace</dt>
+		<dt>Rackspace, San Antonio, TX</dt>
 				<dd>
 					<em>Windows Administrator</em>
-					<strong>Jan 2013 –  Present</strong>
-					&bull; Maintained new customer account base for their first 60 days as a Rackspace Cloud Customer.</br>
-					&bull; Achieved Net Promoter Score of 78 across customer base for 2016.</br>
-					&bull; Fulfilled 100% closed loop responses for customer service level agreements.</br>
-					&bull; Provided Fanatical Support to customers and Rackers via phone, chat, and tickets.</br>
-					&bull; Advised nationally syndicated cloud account in handling over 140k hits/min.</br>
+					<strong>Feb 2012 - July 2012</strong>
 				</dd>
 	</dl>	 
 </body>
